@@ -1,3 +1,8 @@
+1998-08-19  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* module.cc (draw_clock): Use flat shading while drawing a dial.
+	(draw_clock) [0]: (Use local viewer while drawing hands.)
+
 1998-08-10  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* Makefile.am (INCLUDES): Define SESSION.
